--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects HTML Template</title>
+
+    <!-- main css -->
     <link rel="stylesheet" href="/styles/main.css">
+
+    <!-- responsive css -->
     <link rel="stylesheet" href="/styles/responsive.css">
 </head>
 
