--- a/index.html
+++ b/index.html
@@ -157,6 +157,78 @@
             </div>
         </section>
 
+        <!-- customer review section -->
+        <section class="customer_review">
+            <!-- review top -->
+            <div class="review_top">
+                <h4>What said about us</h4>
+                <h1>Customer <span>Reviews</span></h1>
+            </div>
+
+            <!-- review box -->
+            <div class="review_box">
+                <div class="review_item">
+                    <div class="review_author">
+                        <img src="/images/review1.jpg" alt="review">
+                        <div class="author_details">
+                            <h3>Andy Dimasky</h3>
+                            <span>Jun 24, 2022</span>
+                            <div class="rating">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/half-star.png" alt="star">
+                            </div>
+                        </div>
+                    </div>
+                    <p>"Vestibulum orci felis, ullamcorper non condimentum non, ultrices ac nunc. Mauris non ligula
+                        suscipit, vulputate mi accumsan, dapibus felis. Nullam sed sapien dui. Nulla auctor sit amet sem
+                        non porta. "</p>
+                </div>
+
+                <div class="review_item">
+                    <div class="review_author">
+                        <img src="/images/review2.jpg" alt="review">
+                        <div class="author_details">
+                            <h3>Frank Dellov</h3>
+                            <span>July 20, 2022</span>
+                            <div class="rating">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/half-star.png" alt="star">
+                            </div>
+                        </div>
+                    </div>
+                    <p>"Vestibulum orci felis, ullamcorper non condimentum non, ultrices ac nunc. Mauris non ligula
+                        suscipit, vulputate mi accumsan, dapibus felis. Nullam sed sapien dui. Nulla auctor sit amet sem
+                        non porta. "</p>
+                </div>
+
+                <div class="review_item">
+                    <div class="review_author">
+                        <img src="/images/review3.jpg" alt="review">
+                        <div class="author_details">
+                            <h3>Nicolo Svensky</h3>
+                            <span>Aug 10, 2022</span>
+                            <div class="rating">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/star-icon.webp" alt="star">
+                                <img src="/images/half-star.png" alt="star">
+                            </div>
+                        </div>
+                    </div>
+                    <p>"Vestibulum orci felis, ullamcorper non condimentum non, ultrices ac nunc. Mauris non ligula
+                        suscipit, vulputate mi accumsan, dapibus felis. Nullam sed sapien dui. Nulla auctor sit amet sem
+                        non porta. "</p>
+                </div>
+            </div>
+        </section>
+
         <!-- sponspors section -->
         <section class="sponspors">
             <!-- section top -->
