--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
                 <div class="facts_item">
                     <img src="/images/icons/projects.png" alt="projects">
                     <span>1458</span>
-                    <p>Awards Winnings</p>
+                    <p>Project Finished</p>
                 </div>
 
                 <div class="facts_item">
                     <img src="/images/icons/customers.png" alt="customers">
                     <span>590</span>
-                    <p>Awards Winnings</p>
+                    <p>Clients Worked</p>
                 </div>
 
                 <div class="facts_item">
                     <img src="/images/icons/email.png" alt="email">
                     <span>22578</span>
-                    <p>Awards Winnings</p>
+                    <p>Email Send</p>
                 </div>
             </div>
         </section>
